Adding cat visuals and background visuals

--- a/SelfEditPage/Homework2.html
+++ b/SelfEditPage/Homework2.html
@@ -8,9 +8,19 @@
         <h1>Welcome to Cat Time!</h1>
         <div id="Playground">
             <!--Playground and background are different, this is the main interactive bit-->
+            <img src="Cat_Sprites/background.png" alt="Drawn picture of a backyard and porch.">
         </div>
-        <div id="Cat_Selector">
-            <!--This is where you can select cats and put them on the playground-->
+        <div id="Cat_Box">
+            <!--This is where you can select cats and put them on the playground. click and drag?-->
+            <div class="Organized_Selector">
+                <!--All images of cats (Testing for now)-->
+                <img src="Cat_Sprites/Bandit_Test.png" class="Cat" alt = "Orange and Gray Cat">
+                <img src="Cat_Sprites/Callie_Test.png" class="Cat" alt="Calico Cat">
+                <img src="Cat_Sprites/Marshmello_Test.png" class="Cat" alt="White and Gray Cat">
+                <img src="Cat_Sprites/Peaches_Test.png" class="Cat" alt="Two-toned orange cat">
+                <img src="Cat_Sprites/Pumpkin_Test.png" class="Cat" alt="Orange and white cat">
+                <img src="Cat_Sprites/Socks_Test.png" class="Cat" alt="Black and white cat">
+            </div>
         </div>
     </body>
 </html>
