Adding javascript console outputs as test

--- a/SelfEditPage/Homework2.html
+++ b/SelfEditPage/Homework2.html
@@ -3,12 +3,12 @@
     <head>
         <title>Cat Time!</title>
         <link href="stylesheet.css" rel="stylesheet">
+        
     </head>
     <body>
         <h1>Welcome to Cat Time!</h1>
         <div id="Playground">
-            <!--Playground and background are different, this is the main interactive bit-->
-            <img src="Cat_Sprites/background.png" alt="Drawn picture of a backyard and porch.">
+            <img src="Cat_Sprites/background.png" class= "Back_Picture" alt="Drawn picture of a backyard and porch.">
         </div>
         <div id="Cat_Box">
             <!--This is where you can select cats and put them on the playground. click and drag?-->
@@ -22,5 +22,7 @@
                 <img src="Cat_Sprites/Socks_Test.png" class="Cat" alt="Black and white cat">
             </div>
         </div>
+
+        <script src="interaction.js"></script>
     </body>
 </html>
